#6(E)(pointer derefrencing python)

--- a/Daily_Coding_Problem#6.ipynb
+++ b/Daily_Coding_Problem#6.ipynb
@@ -11,10 +11,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ctypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    \n",
+    "    def __init__(self,val):\n",
+    "        self.val=val\n",
+    "        self.both=0\n",
+    "        \n",
+    "class XorLL:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        \n",
+    "        self.head=self.tail=None\n",
+    "        self.__nodes=[]\n",
+    "        \n",
+    "    def add(self,node):\n",
+    "        \n",
+    "        if self.head is None:\n",
+    "            self.head=self.tail=node\n",
+    "            \n",
+    "        else:\n",
+    "            \n",
+    "            self.tail.both=id(node)^self.tail.both\n",
+    "            node.both=id(tail)\n",
+    "            self.tail = node\n",
+    "            self.__nodes.append(node)\n",
+    "            \n",
+    "    def get(self,index):\n",
+    "        prev_id=0\n",
+    "        node=self.head\n",
+    "        for i in range(index):\n",
+    "            next_id=prev_id^id(node)\n",
+    "            if next_id:\n",
+    "                prev_id=id(node)\n",
+    "                node=_get_object(next_id)\n",
+    "            else:\n",
+    "                raise IndexError('Linked list index error out of range')\n",
+    "        return node\n",
+    "    \n",
+    "    def _get_obj(i):\n",
+    "        \n",
+    "        return ctypes.cast(i,ctypes.py_object).value"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#add in O(1)\n",
+    "#get in O(n)"
+   ]
   }
  ],
  "metadata": {
