--- a/Dynamic_Programming#1.ipynb
+++ b/Dynamic_Programming#1.ipynb
@@ -17,8 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#dynamic programming\n",
-    "\n",
+    "#dynamic programming(iterative approach)(down-top approach)\n",
+    "import sys\n",
     "def find(n):\n",
     "    if n<=1:\n",
     "        return 0\n",
@@ -30,8 +30,8 @@
     "    dp[2]=1\n",
     "    \n",
     "    for i in range(3,n+1):\n",
-    "        a=100000000\n",
-    "        b=100000000\n",
+    "        a= sys.maxsize\n",
+    "        b= sys.maxsize\n",
     "        if i%2==0:\n",
     "            a=dp[i//2]\n",
     "        if i%3==0:\n",
@@ -45,6 +45,77 @@
     "    \n",
     "num=int(input())\n",
     "print(find(num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#dynamic programming(recursive approach)(top-down approach)\n",
+    "import sys\n",
+    "def find1(n,dp):\n",
+    "    \n",
+    "    if n<=1:\n",
+    "        return 0\n",
+    "    \n",
+    "    ans1=sys.maxsize\n",
+    "   \n",
+    "    \n",
+    "    \n",
+    "    if n%3==0:\n",
+    "        if dp[n//3]==-1:\n",
+    "            ans1=find1(n//3,dp)\n",
+    "            dp[n//3]=ans1\n",
+    "            \n",
+    "        else:\n",
+    "            ans1=dp[n//3]\n",
+    "            \n",
+    "    ans2=sys.maxsize        \n",
+    "    if n%2==0:\n",
+    "        if dp[n//2]==-1:\n",
+    "            ans2=find1(n//2,dp)\n",
+    "            dp[n//2]=ans2\n",
+    "            \n",
+    "            \n",
+    "        else:\n",
+    "            ans2=dp[n//2]\n",
+    "            \n",
+    "    ans3=sys.maxsize\n",
+    "    if dp[n-1]==-1:\n",
+    "        ans3=find1(dp[n-1],dp)\n",
+    "        dp[n-1]=ans3\n",
+    "        \n",
+    "    else:\n",
+    "        ans3=dp[n-1]\n",
+    "        \n",
+    "    \n",
+    "    ans = 1+ min(ans1,ans2,ans3)\n",
+    "    return ans\n",
+    "        \n",
+    "    \n",
+    "num=int(input())\n",
+    "dp=[-1 for i in range(num)]\n",
+    "print(find1(num,dp))   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dp"
    ]
   }
  ],
